unpackaged/main/default/objects/Group__c/Group__c.object-meta.xml
<CustomObject>
    <description>System Admin Groups Object</description>
    <label>Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>