unpackaged/main/default/objects/Group__c/fields/AccessAble_Group__c.field-meta.xml
<CustomField>
    <fullName>AccessAble_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccessAble Group</label>
    <type>Checkbox</type>
</CustomField>