unpackaged/main/default/objects/Group__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>This is captured from the L&amp;D</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>