unpackaged/main/default/objects/Group__c/fields/Agency_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Email Address</label>
    <type>Email</type>
</CustomField>