unpackaged/main/default/objects/Group__c/fields/Agent_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Email Address</label>
    <type>Email</type>
</CustomField>