unpackaged/main/default/objects/Group__c/fields/Blue_Rep__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep__c</fullName>
    <description>This is captured from the L&amp;D</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Blue Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>