unpackaged/main/default/objects/Group__c/fields/BlueFit_Group__c.field-meta.xml
<CustomField>
    <fullName>BlueFit_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlueFit Group</label>
    <type>Checkbox</type>
</CustomField>