unpackaged/main/default/objects/Group__c/fields/EDI_Enrollment_Feeds__c.field-meta.xml
<CustomField>
    <fullName>EDI_Enrollment_Feeds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EDI Enrollment Feeds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>