unpackaged/main/default/objects/Group__c/fields/EDI_Vendor__c.field-meta.xml
<CustomField>
    <fullName>EDI_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tie a group to IT Vendor</description>
    <inlineHelpText>This is the groups IT Vendor that provides EDI Files</inlineHelpText>
    <label>EDI Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Groups (Serviced by EDI Vendor)</relationshipLabel>
    <relationshipName>Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>