unpackaged/main/default/objects/Group__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>