unpackaged/main/default/objects/Group__c/fields/Group_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Group_Nbr__c</fullName>
    <description>This field acting as external ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Group Nbr</label>
    <length>15</length>
    <type>Text</type>
</CustomField>