unpackaged/main/default/objects/Group__c/fields/Group_System_Information__c.field-meta.xml
<CustomField>
    <fullName>Group_System_Information__c</fullName>
    <formula>IF(
System__c = &quot;Compass&quot;,
HYPERLINK(&quot;http://csw/Group/&quot; &amp; Group_Id__c, IMAGE(&quot;resource/csw&quot;, &quot;CSW&quot;)),
IF(
System__c = &quot;LifePro&quot;,
IMAGE(&quot;resource/LIFEPRO&quot;, &quot;LifePro&quot;, 33.25, 95),&quot;&quot;
)
)</formula>
    <label>Group System Information</label>
    <type>Text</type>
</CustomField>