unpackaged/main/default/objects/Group__c/fields/Grp_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Grp_Conversion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grp Conversion Date</label>
    <type>Date</type>
</CustomField>