unpackaged/main/default/objects/Group__c/fields/Grp_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Grp_Effective_Date__c</fullName>
    <description>This field contains the Effective date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Grp Effective Date</label>
    <type>Date</type>
</CustomField>