unpackaged/main/default/objects/Group__c/fields/Grp_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Grp_Term_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grp Term Date</label>
    <type>Date</type>
</CustomField>