unpackaged/main/default/objects/Group__c/fields/LTD_Reinsurer__c.field-meta.xml
<CustomField>
    <fullName>LTD_Reinsurer__c</fullName>
    <description>Field created to capture the reinsurer for the group</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures LTD Reinsurer for the group</inlineHelpText>
    <label>LTD Reinsurer</label>
    <length>15</length>
    <type>Text</type>
</CustomField>