unpackaged/main/default/objects/Group__c/fields/MG_Integrated_Supplement__c.field-meta.xml
<CustomField>
    <fullName>MG_Integrated_Supplement__c</fullName>
    <formula>Master_Group__r.Integrated_Supplemental__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MG Integrated Supplement</label>
    <type>Text</type>
</CustomField>