unpackaged/main/default/objects/Group__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>