unpackaged/main/default/objects/Group__c/listViews/My_Group.listView-meta.xml
<ListView>
    <fullName>My_Group</fullName>
    <columns>NAME</columns>
    <columns>Master_Group__c</columns>
    <columns>Group_Id__c</columns>
    <columns>Group_Nbr__c</columns>
    <columns>Grp_Effective_Date__c</columns>
    <columns>Grp_Term_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Group</label>
</ListView>